samples/_failures_safe/1761711467_086cdd_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f044bcf5.c: In function ‘dijkstra’:
./samples/SAFE/__tmp_f044bcf5.c:181:5: error: expected declaration or statement at end of input
  181 |     printf("Dijkstra distances from vertex %d:\n", start);
      |     ^~~~~~
